--- a/booking.html
+++ b/booking.html
@@ -160,63 +160,102 @@
         </div>
         <!-- Reservation Start -->
         
-
-        <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5">
-                <div class="row g-5">
-                    <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Reservation</a>
-                        <a class="btn btn-link" href="">Privacy Policy</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>3351 Panama Lane, Bakersfield California</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+1(661) 855-9777</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
-                        <h5 class="text-light fw-normal">Monday - Saturday</h5>
-                        <p>09AM - 09PM</p>
-                        <h5 class="text-light fw-normal">Sunday</h5>
-                        <p>10AM - 08PM</p>
-                    </div>
-
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+            <!-- Logo Section -->
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-logo-container mb-4">
+                    <img src="img/logo_round.png" alt="Punjab Heritage Logo" class="footer-logo">
                 </div>
             </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Punjab Heritage</a>, All Right Reserved. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
-                        </div>
+
+            <!-- Contact Info -->
+            <div class="col-lg-3 col-md-6">
+                <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
+                <p class="mb-2">
+                    <a href="https://goo.gl/maps/YDF7K8qhKvK9ZQWP6" target="_blank" class="text-light">
+                        <i class="fa fa-map-marker-alt me-3"></i>3351 Panama Lane, Bakersfield, CA 93313
+                    </a>
+                </p>
+                <p class="mb-2">
+                    <a href="tel:+16618559777" class="text-light">
+                        <i class="fa fa-phone-alt me-3"></i>+1 (661) 855-9777
+                    </a>
+                </p>
+                <p class="mb-2">
+                    <a href="mailto:info@punjabheritage.com" class="text-light">
+                        <i class="fa fa-envelope me-3"></i>info@punjabheritage.com
+                    </a>
+                </p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social" href="#" title="Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-social" href="#" title="Facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-social" href="#" title="YouTube">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-social" href="#" title="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Opening Hours -->
+            <div class="col-lg-3 col-md-6">
+                <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening Hours</h4>
+                <div class="text-light">
+                    <h6 class="text-light fw-normal">Monday - Saturday</h6>
+                    <p class="mb-4">09:00 AM - 09:00 PM</p>
+                    <h6 class="text-light fw-normal">Sunday</h6>
+                    <p>10:00 AM - 08:00 PM</p>
+                </div>
+            </div>
+
+            <!-- Location Map -->
+            <div class="col-lg-3 col-md-6">
+                <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Location</h4>
+                <div class="map-responsive rounded">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3234.7894733550917!2d-119.05793548947566!3d35.31673495675701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80ea41c5a6026d15%3A0x34a6bb9a3b49e047!2sPunjab%20Heritage!5e0!3m2!1sen!2sus!4v1699887741234!5m2!1sen!2sus"
+                        width="100%" 
+                        height="100" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Punjab Heritage Restaurant Location"
+                        aria-label="Google Maps showing Punjab Heritage Restaurant Location">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Copyright -->
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a class="border-bottom" href="https://punjabheritage.com">Punjab Heritage</a>, All Rights Reserved.
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <div class="footer-menu">
+                        <a href="index.html">Home</a>
+                        <a href="menu.html">Menu</a>
+                        <a href="about.html">About</a>
+                        <a href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
+    </div>
+</div>
+<!-- Footer End -->
 
 
         <!-- Back to Top -->
