updated iamge sizes

--- a/gallery.html
+++ b/gallery.html
@@ -110,10 +110,10 @@
                     <div class="col-12 text-center">
                         <ul class="gallery-filter-buttons">
                             <li class="btn btn-outline-primary m-2 active" data-filter="*">All</li>
-                            <li class="btn btn-outline-primary m-2" data-filter=".venue">Venue</li>
+                            <li class="btn btn-outline-primary m-2" id = "venue" data-filter=".venue">Venue</li>
                             <li class="btn btn-outline-primary m-2" data-filter=".events">Events</li>
                             <li class="btn btn-outline-primary m-2" data-filter=".food">Food</li>
-                            <li class="btn btn-outline-primary m-2" data-filter=".catering">Catering</li>
+                            <li class="btn btn-outline-primary m-2" id="catering" data-filter=".catering">Catering</li>
                         </ul>
                     </div>
                 </div>
@@ -223,10 +223,10 @@
                     <!-- Food Images -->
                     <div class="col-lg-4 col-md-6 gallery-item food">
                         <div class="gallery-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/gallery/food-1.jpg" alt="Punjab Heritage Tandoori Platter">
+                            <img class="img-fluid w-100" src="img/tandoor.jpg" alt="Punjab Heritage Tandoori Platter">
                             <div class="gallery-overlay">
                                 <div class="d-flex align-items-center justify-content-center h-100">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/gallery/food-1.jpg" data-lightbox="food" data-title="Tandoori Specialties">
+                                    <a class="btn btn-square btn-outline-light mx-1" href="img/tandoor.jpg" data-lightbox="food" data-title="Tandoori Specialties">
                                         <i class="fa fa-eye"></i>
                                     </a>
                                 </div>
@@ -239,10 +239,10 @@
                     </div>
                     <div class="col-lg-4 col-md-6 gallery-item food">
                         <div class="gallery-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/gallery/food-2.jpg" alt="Punjab Heritage Curry Selection">
+                            <img class="img-fluid w-100" src="img/menu/shahi-paneer.jpg" alt="Punjab Heritage Curry Selection">
                             <div class="gallery-overlay">
                                 <div class="d-flex align-items-center justify-content-center h-100">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/gallery/food-2.jpg" data-lightbox="food" data-title="Curry Selection">
+                                    <a class="btn btn-square btn-outline-light mx-1" href="img/menu/shahi-paneer.jpg" data-lightbox="food" data-title="Curry Selection">
                                         <i class="fa fa-eye"></i>
                                     </a>
                                 </div>
@@ -255,10 +255,10 @@
                     </div>
                     <div class="col-lg-4 col-md-6 gallery-item food">
                         <div class="gallery-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/gallery/food-3.jpg" alt="Punjab Heritage Dessert Platter">
+                            <img class="img-fluid w-100" src="img/sweets.jpg" alt="Punjab Heritage Dessert Platter">
                             <div class="gallery-overlay">
                                 <div class="d-flex align-items-center justify-content-center h-100">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/gallery/food-3.jpg" data-lightbox="food" data-title="Sweet Delights">
+                                    <a class="btn btn-square btn-outline-light mx-1" href="img/sweets.jpg"  data-lightbox="food" data-title="Sweet Delights">
                                         <i class="fa fa-eye"></i>
                                     </a>
                                 </div>
