--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                             <h2 class="text-white animated slideInLeft">Premier Banquet Hall & Catering Services</h2>
                             <p class="text-white animated slideInLeft mb-4 pb-2">At Punjab Heritage, we specialize in creating memorable events with our elegant banquet facilities and authentic Indian cuisine. From weddings to corporate events, our expert team delivers exceptional service and flavors.</p>
                             <div class="d-flex align-items-center gap-3">
-                                <a href="#banquet-section" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Banquet Hall</a>
-                                <a href="#catering-section" class="btn btn-light py-sm-3 px-sm-5 animated slideInLeft">Catering Services</a>
+                                <a href="gallery.html#venue" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Banquet Hall</a>
+                                <a href="gallery.html#catering" class="btn btn-light py-sm-3 px-sm-5 animated slideInLeft">Catering Services</a>
                             </div>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -181,7 +181,7 @@
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="feature-item rounded overflow-hidden">
-                            <img class="img-fluid" src="img/tandoor.jpg" alt="Traditional Tandoor">
+                            <img class="img-fluid" src="img/tandoor.jpg" alt="Traditional Tandoor" style="width: 300px; height: 250px; object-fit: cover;">
                             <div class="p-4 text-center">
                                 <h5 class="mb-3">Traditional Cooking</h5>
                                 <p>Authentic dishes prepared in clay tandoor using age-old recipes</p>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="feature-item rounded overflow-hidden">
-                            <img class="img-fluid" src="img/sweets.jpg" alt="Indian Sweets">
+                            <img class="img-fluid" src="img/sweets.jpg" alt="Indian Sweets" style="width: 300px; height: 250px; object-fit: cover;">
                             <div class="p-4 text-center">
                                 <h5 class="mb-3">Homemade Sweets</h5>
                                 <p>Fresh Indian sweets made daily by our expert halwai</p>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="feature-item rounded overflow-hidden">
-                            <img class="img-fluid" src="img/catering.jpg" alt="Catering Service">
+                            <img class="img-fluid" src="img/catering.jpg" alt="Catering Service" style="width: 300px; height: 250px; object-fit: cover;">
                             <div class="p-4 text-center">
                                 <h5 class="mb-3">Premium Catering</h5>
                                 <p>Professional catering for weddings and special events</p>
